@startuml Shoemart
class Item {
    id: GUID
    name: string
    category: Category
    description: string
    price: float
    rating: int
    quantity: int
    photos: string[]
    getId()
    changePrice()
    setId()
}

class User {
    id: GUID
    displayName: string
    cart: Cart
    address: string
    billingAddress: string
    phone: string
    checkOut()
}

class ItemList {
    items: Item[]
    addItem()
    removeItem()
    findItem()
}

class Category {
    id: GUID
    name: string
    description: string()
    addCategory()
    removeCategory()
    getProducts()
    getId()
    setId()
}

class CategoryList {
    Categories: Category[]
    addCategory()
    removeCategory()
}

class Cart {
    items: Items[]
    addItemOnCart()
    removeItemOnCart()
    getTotal()
}

ItemList -- Cart: Contains
ItemList - Item: 0..* : 1
Item -- Category: type of
Category - CategoryList: 0..* :  1
User - Cart: 1:1 Has a
@enduml